# django-libraryms

./: .dockerignore  .env.docker.sample  .gitignore  .gitmodules  .tool-versions  Dockerfile  Dockerfile.dev  Makefile  README.md  REQUIREMENTS.md  TODO.md  build-frontend.sh  build.sh  docker-compose.yaml  entrypoint.sh  fly.toml  mypy.ini  notes.md  pyproject.toml  render.yaml
.github/actions/login-to-gh/: action.yml
.github/workflows/: deploy_frontend_assets_version.yml  main.yml
compose/local/: start_celery_flower  start_web
compose/production/: start_celery_beat  start_celery_flower  start_celery_worker
db/: create.sql  fly.toml
scripts/: build-backend.sh  build-frontend.sh  build.sh
scripts/local/: start_celery_beat
src/: db.sqlite3
src/apps/: tasks.py
src/apps/books/: admin.py  const.py  models.py  urls.py
src/apps/books/admin/: __init__.py  admin.py  deleted_order.py  order.py
src/apps/books/api/: serializers.py  views.py  viewsets.py
src/apps/books/migrations/: 0001_initial.py  0001_initial_squashed_0013_alter_book_options.py  0002_add_book_reservation_order_models.py  0003_alter_reservation_term.py  0004_order_change_reason_order_last_modified_by_and_more.py  0005_book_cover_alter_book_isbn.py  0006_alter_author_year_of_birth_and_more.py  0007_historicalorder_reservation_order_reservation.py  0008_alter_book_pages_description_and_more.py  0009_alter_reservation_options.py  0010_historicalorder_member_notified_and_more.py  0011_alter_reservation_options.py  0012_alter_author_year_of_birth_and_more.py  0013_alter_book_options.py  0014_remove_order_member_notified.py  0015_alter_reservation_options.py  0016_alter_reservation_term_reservationextension.py
src/apps/books/models/: __init__.py  author.py  book.py  order.py  publisher.py
src/apps/users/: admin.py  models.py  types.py
src/apps/users/api/: serializers.py  views.py
src/apps/users/management/commands/: seed_users.py
src/apps/users/migrations/: 0001_initial.py  0002_user_is_librarian_user_is_member.py  0003_make_user_email_unique.py  0004_user_password_reset_token_and_more.py
src/apps/users/urls/: auth.py
src/core/: .env.ci  .env.example  __init__.py  celery.py  middleware.py  permissions.py  settings.py  tasks.py  throttling.py  urls.py  views.py  wsgi.py
src/core/api/: exceptions.py
src/core/conf/: api.py  auth.py  common.py  database.py  debug_toolbar.py  environ.py  http.py  i18n.py  installed_apps.py  logging.py  mailing.py  middleware.py  security.py  sentry.py  static.py  storages.py
src/core/management/commands/: seed_db.py
src/core/middleware/: healthcheck.py  sql.py
src/core/templates/: vue-index.html
src/core/templates/email/: admin_member_registration_request_received.json  admin_order_created.json  admin_reservation_extension_requested.json  member_password_reset_link.json  member_registration_notification.json  member_reservation_confirmed.json  member_reservation_extension_approved.json  member_reservation_reminder.json
src/core/urls/: __init__.py
src/core/urls/api/: v1.py  views.py
src/core/utils/: admin.py  mailer.py  models.py
tests/: conftest.py
tests/apps/books/: test_api.py  test_author.py  test_book.py  test_book_queryset.py  test_order.py  test_publisher.py  test_reservation.py  test_reservation_extension.py  test_reservations_queryset.py  test_send_reservation_term_reminder.py
tests/apps/books/admin/: test_deleted_order.py  test_order.py  test_reservation_extension.py
tests/apps/books/views/: test_book_detail_view.py  test_book_list_view.py  test_book_order_view.py  test_reservation_extend_view.py
tests/apps/users/: test_cookie_token_obtain.py  test_cookie_token_refresh.py  test_member_password_change_view.py  test_member_password_confirm_view.py  test_member_password_reset_view.py  test_member_profile_view.py  test_member_registration_view.py  test_send_extension_request_received_email.py  test_send_member_registration_request_received.py  test_send_registration_notification_to_member.py  test_send_reservation_extension_approved_email.py  test_user.py
tests/core/: test_mailer.py  test_tasks.py  test_views.py
tests/core/api/: test_docs_swagger_view.py  test_exception_handler.py  test_throttling.py
tests/core/models/: test_timestamped.py
tests/core/tasks/: test_ping_production_website.py  test_send_order_created_email.py  test_send_password_reset_link_to_member.py  test_send_reservation_confirmed_email.py
tests/fixtures/: api.py  books.py  mailing.py  users.py
