[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.8.3"]

[tool.poetry]
authors = ["Alexey Vorobyov <alexey.vorobyov.s@gmail.com>"]
description = "Library management system"
name = "django-libms"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^5.0"
bpython = "^0.24"
celery = "^5.4.0"
celery-singleton = "^0.3.1"
django-celery-beat = "^2.6.0"
django-celery-results = "^2.5.1"
django-cors-headers = "^4.4.0"
django-environ = "^0.11.2"
django-filter = "^24.2"
django-import-export = "^4.1.1"
django-ses = "^4.1.0"
django-simple-history = "^3.7.0"
django-split-settings = "^1.3.2"
django-storages = {extras = ["s3"], version = "^1.14.4"}
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
gunicorn = "^23.0.0"
pillow = "^10.4.0"
psycopg2-binary = "^2.9.9"
python = "~3.11"
redis = "^5.0.8"
sentry-sdk = {extras = ["django"], version = "^2.12.0"}
whitenoise = {extras = ["brotli"], version = "^6.7.0"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
mixer = "^7.2.2"
mypy = "^1.11.2"
pytest-cov = "^5.0.0"
pytest-deadfixtures = "^2.2.1"
pytest-django = "^4.8.0"
pytest-env = "^1.1.3"
pytest-freezegun = "^0.4.2"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.1"
ruff = "^0.5.1"
toml-sort = "^0.23.1"
types-requests = "^2.32.0.20240712"

[tool.coverage.report]
omit = [
    "*/migrations/*",
    "src/core/conf/*",
    "src/core/middleware/sql.py",
    "src/core/wsgi.py",
]

[tool.coverage.run]
disable_warnings = ["module-not-measured"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
addopts = [
    "--maxfail=1",
    "--reuse-db",
    "--verbosity=1",
    "-p no:warnings",
    "--capture=no", # ouputs prints statements / db errors(if any, like integrity errors)
]
env = [
    "CELERY_ALWAYS_EAGER = 1",
    "CI = 1",
    "DEFAULT_FILE_STORAGE = django.core.files.storage.memory.InMemoryStorage",
    "DISABLE_THROTTLING = 1",
    "PRODUCTION_URL = https://example.com",
    "THROTTLING_ANON_RATE = 3/minute",
]
python_files = "test*.py"
pythonpath = ". src"

[tool.ruff]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "TID252",  # Prefer absolute imports over relative imports from parent modules
]
ignore = []

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-local-folder = ["apps", "core"]

[tool.tomlsort]
all = true
in_place = true
sort_first = ["tool.poetry"]
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
